--- a/src/Siciarek/ChatBundle/Resources/views/Chat/index.html.twig
+++ b/src/Siciarek/ChatBundle/Resources/views/Chat/index.html.twig
@@ -1,8 +1,7 @@
 {% extends 'SiciarekChatBundle::base.html.twig' %}
 
 {% block body %}
-<h1>INDEX</h1>
-
-<p><a href="{{url('default.private')}}">Chat</a>
+<h1>CHAT</h1>
 
 {% endblock %}
+
