Update Laaf service

--- a/Resources/views/Default/home.html.twig
+++ b/Resources/views/Default/home.html.twig
@@ -27,7 +27,7 @@
             </h1>
             <br/>
             <p>
-                <em>If you would like to use the chat, click "Chat" in the main menu. Thank you.</em> 
+                <em>If you would like to use the chat, click "Chat" on the top menu bar.</em> 
             </p>
         </div>
     </div>
