--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -8,12 +8,12 @@
             {
                 label: 'Home',
                 icon: 'home',
-                route: 'default.home',
+                route: 'chat.default.home',
             },
             {
                 label: 'Chat',
                 icon: 'edit',
-                route: 'default.sample',
+                route: 'chat.default.sample',
             },
             {
                 label: 'Sign in',
