Message date format fix

--- a/Resources/views/Default/sample.html.twig
+++ b/Resources/views/Default/sample.html.twig
@@ -18,6 +18,10 @@
         #messages dl dt:after {
             content: ':';
         }
+        
+        .right {
+            text-align:right!important;
+        }
     </style>
 {% endblock %}
 
