--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -54,7 +54,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="{{ path('default.home') }}" class="navbar-brand">
+                    <a href="{{ path('chat.default.home') }}" class="navbar-brand">
                         <strong>Sample Chat</strong>
                         &nbsp;<i class="fa-certificate fa"></i>  
                     </a>
